# ai_frameworks

crewaiAgents/financial_reseracher/: README.md  pyproject.toml
crewaiAgents/financial_reseracher/output/: report.md
crewaiAgents/financial_reseracher/src/financial_reseracher/: crew.py  main.py
crewaiAgents/financial_reseracher/src/financial_reseracher/config/: agents.yaml
crewaiAgents/mydebate/: pyproject.toml
crewaiAgents/mydebate/output/: decide.md  oppose.md  propose.md
crewaiAgents/mydebate/src/mydebate/: main.py
crewaiAgents/mydebate/src/mydebate/config/: agents.yaml
crewaiAgents/stock_picker/output/: trending_companies.json
crewaiAgents/stock_picker/src/stock_picker/: crew.py  main.py
crewaiAgents/stock_picker/src/stock_picker/config/: agents.yaml
mcpServer/my-first-mcp-server/: main.py
openaiAgents/: checkClient.py  lab1.py  lab2.py  lab3.py
practiceTwo/: ProfileChat.py  README.md  app.py  lab1.py  lab2.py  lab3.py
practiceTwo/me/: summary.text
