[project]
name = "financial_reseracher"
version = "0.1.0"
description = "financial_reseracher using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.201.1,<1.0.0"
]

[project.scripts]
financial_reseracher = "financial_reseracher.main:run"
run_crew = "financial_reseracher.main:run"
train = "financial_reseracher.main:train"
replay = "financial_reseracher.main:replay"
test = "financial_reseracher.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
